--- a/src/appsco-directory-page.html
+++ b/src/appsco-directory-page.html
@@ -251,7 +251,7 @@
 
                 <div class="info-actions flex-horizontal">
                     <paper-button
-                            class="edit-button flex"
+                            class="button flex"
                             on-tap="_onAccountInfoEdit">
                         Edit
                     </paper-button>
