--- a/src/appsco-groups-page.html
+++ b/src/appsco-groups-page.html
@@ -128,7 +128,7 @@
 
                 <div class="info-actions flex-horizontal">
                     <paper-button
-                            class="edit-button flex"
+                            class="button flex"
                             on-tap="_onGroupInfoEdit">
                         Edit
                     </paper-button>
