--- a/src/appsco-oauth-applications-page.html
+++ b/src/appsco-oauth-applications-page.html
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="info-actions flex-horizontal">
-                    <paper-button class="edit-action flex"
+                    <paper-button class="button flex"
                                   on-tap="_onInfoEditAction">
                         Edit
                     </paper-button>
