--- a/src/appsco-reports-page.html
+++ b/src/appsco-reports-page.html
@@ -18,11 +18,8 @@
 <dom-module id="appsco-reports-page">
     <template>
         <style include="appsco-page-styles">
-            :host .info-actions > .open-action {
+            :host .info-actions > .open-button {
                 margin-right: 1px;
-            }
-            :host .info-actions > .export-action {
-                @apply(--secondary-button);
             }
         </style>
 
@@ -63,12 +60,12 @@
                 </div>
 
                 <div class="info-actions flex-horizontal">
-                    <paper-button class="open-action flex"
+                    <paper-button class="button open-button flex"
                                   on-tap="_onOpenReportAction">
                         Open
                     </paper-button>
 
-                    <paper-button class="export-action flex"
+                    <paper-button class="button secondary-button flex"
                                   on-tap="_onExportReportAction">
                         Export
                     </paper-button>
