--- a/src/directory/appsco-manage-account-components-page.html
+++ b/src/directory/appsco-manage-account-components-page.html
@@ -31,8 +31,7 @@
                 @apply(--layout-horizontal);
                 @apply(--layout-wrap);
                 @apply(--layout-justified);
-                font-size: 14px;
-                color: var(--primary-text-color);
+                @apply(--appsco-components-page);
 
                 --paper-button: {
                      padding: 6px 0;
