--- a/src/appsco-company-account-page.html
+++ b/src/appsco-company-account-page.html
@@ -7,7 +7,7 @@
 <link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
 
 <link rel="import" href="components/page/appsco-content.html">
-<link rel="import" href="components/page/appsco-page-styles.html">
+<link rel="import" href="components/page/appsco-manage-page-styles.html">
 <link rel="import" href="components/account/appsco-account-image-settings.html">
 <link rel="import" href="account/appsco-account-components-page.html">
 <link rel="import" href="account/appsco-account-settings-page.html">
@@ -20,59 +20,17 @@
 
 <dom-module id="appsco-company-account-page">
     <template>
-        <style include="appsco-page-styles">
-            :host {
-                --resource-width: 300px;
-            }
-            :host paper-icon-button::shadow paper-ripple {
-                width: 150%;
-                height: 150%;
-                top: -25%;
-                left: -25%;
-            }
+        <style include="appsco-manage-page-styles">
             :host div[resource] {
-                padding: 10px;
-                height: calc(100% - 32px - 20px - 10px);
+                height: calc(100% - 32px - 20px);
             }
-            :host div[resource] > .resource-header {
-                padding: 20px 10px 30px;
-                position: relative;
-            }
-            :host div[resource] > .resource-content, :host .content-container {
-                padding: 0;
-            }
-            :host div[content] {
-                height: 100%;
-            }
-            :host .content-components, :host .content-components neon-animated-pages {
-                height: 100%;
-            }
-            appsco-account-components-page {
-                padding: 10px;
-            }
-            appsco-account-image-settings {
+            :host appsco-account-image-settings {
                 display: block;
             }
-            .account-info {
-                margin-top: 10px;
-                font-size: 14px;
-            }
-            .account-info p {
-                margin: 4px 0;
-            }
-            .account-managed-by {
+            :host .account-managed-by {
                 margin-top: 10px;
             }
-            :host .resource-actions > .change-password-button {
-                @apply(--secondary-button);
-            }
-            :host([medium-screen]) {
-                --resource-width: 240px;
-            }
-            :host([mobile-screen]) {
-                --resource-width: 180px;
-            }
-            .change-password-hero {
+            :host .change-password-hero {
                 position: fixed;
                 top: 0;
                 right: 0;
@@ -83,12 +41,6 @@
                 height: 100px;
                 opacity: 0;
                 visibility: hidden;
-            }
-            hr {
-                height: 1px;
-                margin: 4px 0;
-                border: none;
-                background-color: var(--divider-color);
             }
         </style>
 
@@ -128,7 +80,7 @@
 
                 <div class="resource-actions flex-horizontal">
                     <paper-button
-                            class="change-password-button flex"
+                            class="button secondary-button flex"
                             on-tap="_onChangePassword">
                         Change password
                     </paper-button>
@@ -138,7 +90,7 @@
 
             <div content>
 
-                <div class="content-components">
+                <div class="content-container">
                     <neon-animated-pages class="flex"
                                          selected="[[ _selected ]]"
                                          attr-for-selected="name"
