--- a/src/appsco-customers-page.html
+++ b/src/appsco-customers-page.html
@@ -143,7 +143,7 @@
 
                 <div class="info-actions flex-horizontal">
                     <paper-button
-                            class="edit-button flex"
+                            class="button flex"
                             on-tap="_onEditCustomer">
                         Edit
                     </paper-button>
