--- a/src/appsco-dashboard-folder-page.html
+++ b/src/appsco-dashboard-folder-page.html
@@ -68,10 +68,7 @@
                 box-sizing: border-box;
                 @apply(--layout-flex-none);
             }
-            :host div[info] .details-log {
-                height: calc(100% - 50px - 65px);
-            }
-            :host .details-log paper-tabs {
+            :host paper-tabs {
                 height: 38px;
                 color: var(--primary-text-color);
             }
@@ -86,9 +83,6 @@
             }
             :host .info-actions > .view-button {
                 margin-right: 1px;
-            }
-            :host .info-actions > .share-button {
-                @apply(--secondary-button);
             }
             appsco-application-details {
                 --appsco-application-icons-color: var(--primary-text-color);
@@ -236,28 +230,27 @@
                     </template>
                 </div>
 
-                <template is="dom-if" if="[[ !_shared ]]">
-                    <appsco-application-subscribers
-                            application="[[ application ]]"
-                            authorization-token="[[ authorizationToken ]]"
-                            preview>
-                    </appsco-application-subscribers>
-                </template>
-
-                <template is="dom-if" if="[[ _shared ]]">
-                    <template is="dom-if" if="[[ isOnPersonal ]]">
-                        <div class="info-shared-by">
-                            <template is="dom-if" if="[[ !application.application.company ]]">
-                                Shared by [[ application.application.added_by.display_name ]]
-                            </template>
-                            <template is="dom-if" if="[[ application.application.company ]]">
-                                Shared by [[ application.application.company.name ]]
-                            </template>
-                        </div>
+                <div class="info-content flex-vertical">
+                    <template is="dom-if" if="[[ !_shared ]]">
+                        <appsco-application-subscribers
+                                application="[[ application ]]"
+                                authorization-token="[[ authorizationToken ]]"
+                                preview>
+                        </appsco-application-subscribers>
                     </template>
-                </template>
 
-                <div class="details-log flex-vertical">
+                    <template is="dom-if" if="[[ _shared ]]">
+                        <template is="dom-if" if="[[ isOnPersonal ]]">
+                            <div class="info-shared-by">
+                                <template is="dom-if" if="[[ !application.application.company ]]">
+                                    Shared by [[ application.application.added_by.display_name ]]
+                                </template>
+                                <template is="dom-if" if="[[ application.application.company ]]">
+                                    Shared by [[ application.application.company.name ]]
+                                </template>
+                            </div>
+                        </template>
+                    </template>
 
                     <template is="dom-if" if="[[ !_shared ]]">
                         <paper-tabs id="paperTabs" selected="{{ _selectedTab }}">
@@ -294,19 +287,18 @@
                             </appsco-application-details>
                         </div>
                     </template>
-
                 </div>
 
                 <template is="dom-if" if="[[ !_shared ]]">
                     <div class="info-actions flex-horizontal">
                         <paper-button
-                                class="view-button flex"
+                                class="button view-button flex"
                                 on-tap="_onApplicationInfoEdit">
                             Edit
                         </paper-button>
 
                         <paper-button
-                                class="share-button flex"
+                                class="button secondary-button flex"
                                 on-tap="_onShareApplication">
                             Share
                         </paper-button>
@@ -316,7 +308,7 @@
                 <template is="dom-if" if="[[ _editClaims ]]">
                     <div class="info-actions flex-horizontal">
                         <paper-button
-                                class="view-button flex"
+                                class="button view-button flex"
                                 on-tap="_onApplicationEditCredentials">
                             Edit Credentials
                         </paper-button>
@@ -326,7 +318,7 @@
                 <template is="dom-if" if="[[ application.permisions.revoke ]]">
                     <div class="info-actions flex-horizontal">
                         <paper-button
-                                class="revoke-button flex"
+                                class="button danger-button flex"
                                 on-tap="_onRevokeApplication">
                             Revoke
                         </paper-button>
