--- a/src/appsco-home-page.html
+++ b/src/appsco-home-page.html
@@ -62,6 +62,9 @@
                      font-size: 14px;
                  };
             }
+            :host appsco-application-subscribers {
+                height: 50px;
+            }
             :host .info {
                 margin-top: 20px;
                 color: var(--primary-text-color);
@@ -192,26 +195,25 @@
                     </template>
                 </div>
 
-                <template is="dom-if" if="[[ !_shared ]]">
-                    <appsco-application-subscribers
-                            application="[[ application ]]"
-                            authorization-token="[[ authorizationToken ]]"
-                            preview>
-                    </appsco-application-subscribers>
-                </template>
-
-                <template is="dom-if" if="[[ _shared ]]">
-                    <div class="info">
-                        <template is="dom-if" if="[[ !application.application.company ]]">
-                            Shared by [[ application.application.added_by.display_name ]]
-                        </template>
-                        <template is="dom-if" if="[[ application.application.company ]]">
-                            Shared by [[ application.application.company.name ]]
-                        </template>
-                    </div>
-                </template>
-
                 <div class="info-content flex-vertical">
+                    <template is="dom-if" if="[[ !_shared ]]">
+                        <appsco-application-subscribers
+                                application="[[ application ]]"
+                                authorization-token="[[ authorizationToken ]]"
+                                preview>
+                        </appsco-application-subscribers>
+                    </template>
+
+                    <template is="dom-if" if="[[ _shared ]]">
+                        <div class="info">
+                            <template is="dom-if" if="[[ !application.application.company ]]">
+                                Shared by [[ application.application.added_by.display_name ]]
+                            </template>
+                            <template is="dom-if" if="[[ application.application.company ]]">
+                                Shared by [[ application.application.company.name ]]
+                            </template>
+                        </div>
+                    </template>
 
                     <template is="dom-if" if="[[ !_shared ]]">
                         <paper-tabs id="paperTabs" selected="{{ _selectedTab }}">
@@ -248,13 +250,12 @@
                             </appsco-application-details>
                         </div>
                     </template>
-
                 </div>
 
                 <div class="info-actions flex-horizontal">
                     <template is="dom-if" if="[[ _editClaims ]]">
                         <paper-button
-                                class="view-button flex"
+                                class="button view-button flex"
                                 on-tap="_onApplicationEditCredentials">
                             Manage
                         </paper-button>
@@ -263,7 +264,7 @@
 
                     <template is="dom-if" if="[[ !_shared ]]">
                         <paper-button
-                                class="share-button flex"
+                                class="button secondary-button flex"
                                 on-tap="_onShareApplication">
                             Share
                         </paper-button>
@@ -273,7 +274,7 @@
                 <template is="dom-if" if="[[ application.permisions.revoke ]]">
                     <div class="info-actions flex-horizontal">
                         <paper-button
-                                class="revoke-button flex"
+                                class="button danger-button flex"
                                 on-tap="_onRevokeApplication">
                             Revoke
                         </paper-button>
