--- a/src/appsco-manage-oauth-application-page.html
+++ b/src/appsco-manage-oauth-application-page.html
@@ -7,7 +7,7 @@
 <link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
 
 <link rel="import" href="components/page/appsco-content.html">
-<link rel="import" href="components/page/appsco-page-styles.html">
+<link rel="import" href="components/page/appsco-manage-page-styles.html">
 <link rel="import" href="components/oauth-application/appsco-manage-oauth-application-components-page.html">
 <link rel="import" href="components/oauth-application/appsco-oauth-application-settings-page.html">
 <link rel="import" href="components/oauth-application/appsco-oauth-application-certificates-page.html">
@@ -15,26 +15,9 @@
 
 <dom-module id="appsco-manage-oauth-application-page">
     <template>
-        <style include="appsco-page-styles">
-            :host {
-                --resource-width: 300px;
-            }
+        <style include="appsco-manage-page-styles">
             :host div[resource] {
-                padding: 10px;
-                height: calc(100% - 32px - 20px - 10px);
-            }
-            :host div[resource] > .resource-header {
-                padding: 20px 10px 30px;
-                position: relative;
-            }
-            :host div[resource] > .resource-content, :host .content-container {
-                padding: 0;
-            }
-            :host div[content], :host .content-container, :host .content-container neon-animated-pages {
-                height: 100%;
-            }
-            appsco-manage-oauth-application-components-page {
-                padding: 10px;
+                height: calc(100% - 32px - 20px);
             }
             :host .application-icon {
                 width: 64px;
@@ -51,17 +34,8 @@
                 @apply(--paper-font-body1);
                 margin-top: 10px;
             }
-            :host .resource-actions > .remove-button {
-                @apply(--danger-button);
-            }
             :host appsco-oauth-application-info {
                 margin-top: 20px;
-            }
-            :host([medium-screen]) {
-                --resource-width: 240px;
-            }
-            :host([mobile-screen]) {
-                --resource-width: 180px;
             }
         </style>
 
@@ -94,7 +68,7 @@
                 
                 <div class="resource-actions flex-horizontal">
                     <paper-button
-                            class="remove-button flex"
+                            class="button danger-button flex"
                             on-tap="_onRemoveApplication">
                         Remove
                     </paper-button>
