--- a/src/company/appsco-company-components-page.html
+++ b/src/company/appsco-company-components-page.html
@@ -23,6 +23,7 @@
                 @apply(--layout-justified);
                 font-size: 14px;
                 color: var(--primary-text-color);
+                @apply(--appsco-components-page);
 
                 --paper-button: {
                      padding: 6px 0;
