--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -14,6 +14,7 @@
 
                 --paper-tabs: {
                     height: 38px;
+                    margin-top: 20px;
                     color: var(--primary-text-color);
                 };
 
